Fix #36 z-index on #modx-footer and drop down top menus

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -2201,6 +2201,7 @@ span.required {
     border-top: 1px solid #ccc;
     color: #777;
     text-align: right;
+    z-index: 100;
 }
 #modx-footer a {
     color: #777;
